--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -13,6 +13,11 @@
 - type: rss
   icon: "fas fa-rss"
   noblank: true
+
+head-scripts:
+  - |
+    <script src="assets/cat/oneko.js"></script>
+
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
